<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Setting_Activity_Action.SettingActivity">

    <RelativeLayout
        android:id="@+id/Toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/setting_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ToolbarTheme"
            app:title="Setting"
            app:titleTextColor="@color/white" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/Toolbar_layout">

        <RelativeLayout
            android:id="@+id/app_Setting_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="12dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/app_label_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/app_setting_text"
                android:textColor="@color/colorPrimary" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/name_feild_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/app_Setting_layout"
            android:padding="12dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:clickable="true"
                android:padding="10dp"
                android:src="@drawable/ic_call_button_icon"
                android:focusable="true" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/name_label_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:text="@string/name_text"
                android:textColor="@color/black" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/setting_name_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/name_label_text_view"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="37dp"
                android:text="@string/demo_contact_name"
                android:textColor="@color/accentBlack" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/name_edit_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:clickable="true"
                android:padding="10dp"
                android:src="@drawable/ic_edit_icon"
                android:focusable="true" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/message_feild_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/name_feild_layout"
            android:padding="12dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:clickable="true"
                android:padding="10dp"
                android:src="@drawable/ic_message_icon"
                android:focusable="true" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/message_label_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:text="@string/default_message"
                android:textColor="@color/black" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/setting_message_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/message_label_text_view"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="37dp"
                android:text="@string/default_message_text"
                android:textColor="@color/accentBlack" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/message_edit_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:clickable="true"
                android:padding="10dp"
                android:src="@drawable/ic_edit_icon"
                android:focusable="true" />


        </RelativeLayout>




        <RelativeLayout
            android:id="@+id/others_Setting__layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/message_feild_layout"
            android:padding="12dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/other_setting"
                android:textColor="@color/colorPrimary" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/version_setting_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/others_Setting__layout"
            android:layout_marginTop="10dp"
            android:paddingStart="12dp"
            tools:ignore="RtlSymmetry">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:clickable="true"
                android:focusable="true"
                android:padding="10dp"
                android:src="@drawable/ic_version_icon" />

            <RelativeLayout
                android:id="@+id/version_number_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/version_label_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/version_number"
                    android:textColor="@color/black" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/version_text_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/version_label_text_view"
                    android:text="@string/version_no"
                    android:textColor="@color/accentBlack" />

            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/feedback_setting_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/version_setting_layout"
            android:layout_marginTop="10dp"
            android:paddingStart="12dp"
            tools:ignore="RtlSymmetry">

            <androidx.appcompat.widget.AppCompatImageView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:clickable="true"
                android:padding="10dp"
                android:src="@drawable/ic_feedback_icon"
                android:focusable="true" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/feedback_label_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:clickable="true"
                android:text="@string/submit_feedback"
                android:textColor="@color/black"
                android:focusable="true" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/policy_setting_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/feedback_setting_layout"
            android:layout_marginTop="10dp"
            android:paddingStart="12dp"
            tools:ignore="RtlSymmetry">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:clickable="true"
                android:padding="10dp"
                android:src="@drawable/ic_about_icon"
                android:focusable="true" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/about_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/about_text"
                android:clickable="true"
                android:textColor="@color/black"
                android:focusable="true" />

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>


