<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:padding="20dp">

    <RelativeLayout
        android:id="@+id/name_input_filed_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/name_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/ic_contacts_icon" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/name_icon"
            android:hint="@string/hint_name"
            android:textColorHint="@color/black"
            android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusTopStart="5dp"
            app:boxStrokeColor="@color/colorPrimary"
            app:boxStrokeWidth="1dp"
            app:hintTextAppearance="@style/AppTheme.TextFloatLabelAppearance">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_contact_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/phone_number_input_feild"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_input_filed_layout"
        android:layout_marginTop="5dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/phone_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/ic_call_button_icon" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/phone_icon"
            android:hint="@string/hint_phone"
            android:textColorHint="@color/black"
            android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusTopStart="5dp"
            app:boxStrokeColor="@color/colorPrimary"
            app:boxStrokeWidth="1dp"
            app:hintTextAppearance="@style/AppTheme.TextFloatLabelAppearance">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittext_contact_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="phone"
                android:maxLines="1"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone_number_input_feild"
        android:layout_marginTop="10dp"
        android:gravity="right">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/contact_cancel_dialog_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:background="@drawable/cancel_round_button"
            android:text="@string/cancel_text"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/contact_save_name_dialog_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/contact_cancel_dialog_button"
            android:background="@drawable/action_round_button"
            android:text="@string/save_text"
            android:textColor="@color/white" />

    </RelativeLayout>

</RelativeLayout>